	prototype for GtkMozEmbed.

	* configure.ac: checks for version of mozilla-gtkmozembed and get
	CFLAGS etc.

	* Makefile.am: add support for building the mozembed package.

	* mk/common.mk: do not -#include<config.h> when compiling .hs to .o as
	it is unnecessary and breaks for modules that do not have
	-I/usr/include/gtk-2.0 in their CPPFLAGS.

2004-12-14 Duncan Coutts <duncan@coutts.uklinux.net>

	* mk/common.mk: quoting/escaping fix so that headers are -#include'd
	properly. This allows a build using ./configure --with-hcflags=-fvia-C
	to get further.

2004-12-13 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/hierarchyGen/TypeGen.hs: make the tool use an external template
	file rather than embeding all the module text. Also added a
	--parentname parameter to allow modules to inherit definitions from
	other modules - this replaces the 'if fname/="Hierarchy" then' hack.

	* tools/hierarchyGen/Hierarchy.chs.template: new file. Template for
	class hierarchy definition modules. Used by the TypeGenerator program.
	
	* Makefile.am: modify invocation of TypeGenerator to pass template file
	and pass --parentname=Hierarchy for all packages other than gtk.

	* mk/common.mk: allow per-module HCFLAGS

	* Makefile.am: c2hs builds without -fglasgow-exts except for the
	Parsers and C2HSConfig modules.

	* tools/c2hs/base/sysdep/SysDep.hs: simplify import and re-export.

	* Makefile.am: build glade and sourceview with more targeted use of
	-fglasgow-exts

2004-12-12 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/gtk.pkg.in: change package_deps to haskell98 rather than base to
	fix linker problem.

	* Makefile.am: use $()-style make variable rather than @@-style
	variable substitution.

	* mk/common.mk: restore use of the $(HCFLAGS) in compile and link
	commands. The variable comes from ./configure's --with-hcflags
	parameter. Also when registering packages use update rather than add
	so that reinstallations do not fail.

2004-12-12 Axel Simon <A.Simon@kent.ac.uk> 
