@@ -1,0 +1,6 @@
+
+TestEmbedMoz : TestEmbedMoz.hs
+	ghc -package mozembed TestEmbedMoz.hs -o TestEmbedMoz
+
+clean:
+	rm TestEmbedMoz TestEmbedMoz.hi TestEmbedMoz.o
